# blogWeb

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
blog_app/: crud.py  data_loader.py  erd.mmd  main.py  models.py  schema.sql
blog_app/templates/: base.html  index.html  post_create.html  post_detail.html  post_edit.html
